# platform.sh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
assets/maps/: demo_map.json  test_map.json
assets/music/: bg.flac
include/: Props.hpp  ResourceManager.hpp
include/Audio/: SoundEngine.hpp
include/Editor/GUI/State/: Machine.hpp  Objects.hpp  Props.hpp  PropsLevel.hpp  State.hpp
include/GFX/: AnimatedSprite.hpp  TiledTilemap.hpp  Tilemap.hpp
include/Level/: Level.hpp  Serialize.hpp
include/Level/Factory/: Levels.hpp  TestLevel.hpp
include/Object/: ArrowPlatform.hpp  ArrowPlatformEnd.hpp  Object.hpp  Objects.hpp  Player.hpp  Props.hpp  Pushable.hpp  Tilemap.hpp
include/State/: Edit.hpp  Game.hpp  Machine.hpp  Menu.hpp  State.hpp
include/Util/: ImGuiShell.hpp
lib/imgui/imgui/: CMakeLists.txt
src/: Props.cpp  ResourceManager.cpp  main.cpp
src/Audio/: SoundEngine.cpp
src/Editor/GUI/: Machine.cpp  Objects.cpp  Props.cpp  PropsLevel.cpp  State.cpp
src/GFX/: AnimatedSprite.cpp  TiledTilemap.cpp  Tilemap.cpp
src/Level/: Level.cpp  Serialize.cpp
src/Level/Factory/: TestLevel.cpp
src/Object/: ArrowPlatform.cpp  ArrowPlatformEnd.cpp  Object.cpp  Player.cpp  Props.cpp  Pushable.cpp  Tilemap.cpp
src/State/: Edit.cpp  Game.cpp  Machine.cpp  Menu.cpp  State.cpp
src/Util/: ImGuiShell.cpp
